added static pages

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -35,7 +35,7 @@
                   %li= link_to "Home", new_user_session_path
                   %li= link_to "Programs", programs_path
                   %li= link_to "NGO Services", ngoservices_path
-                  %li= link_to "Board Of Education", boardofeducation_path
+                  %li= link_to "Board Of Education", staticpages_alphabet_path
                   %li= link_to "About US", aboutus_path
                 %form.navbar-form.navbar-right{:role => "search"}
                   .form-group
