--- a/app/views/staticpages/aboutus.html.erb
+++ b/app/views/staticpages/aboutus.html.erb
@@ -1,2 +1,3 @@
-<h1>Staticpages#aboutus</h1>
-<p>Find me in app/views/staticpages/aboutus.html.erb</p>
+<h1><b>about Us:</b></h1>
+<p><h4>“I am Gifted” is an English Proficiency Program, conducting weekend classes from 2009 onwards. We are really happy to share the successful completion of four years with each one of you. We have received a lot of appreciation from parents, teachers and many passionate educators only due to the fact that we were able to provide an environment which not only made learning fun for the students but also empowered the young learners to express themselves confidently and creatively.
+<h4></p>
