new files added

--- a/app/assets/stylesheets/custom.css.sass
+++ b/app/assets/stylesheets/custom.css.sass
@@ -4,7 +4,10 @@ html
 
 body 
   padding-top: 20px
-  background-image: url('backimg.jpg')
+  background-image: url('backimg10.jpg')
+  background-repeat:no-repeat
+
+
 
 
 p 
@@ -67,7 +70,7 @@ p
   margin-right: 10px
   border-radius: 15px
   moz-border-radius: 15px
-  border: 2px solid
+  border: 2px solid 
 	
 
 #form-right
@@ -78,7 +81,7 @@ p
   padding-left: 10px
   border-radius: 15px
   moz-border-radius: 15px
-  border: 2px solid
+  border: 2px solid orange
   
 
 .container
@@ -126,3 +129,81 @@ p
 .menu-item
   font-family: verdana
   font-size: 16px
+#divstyle
+  width: 350px
+  height: 100px
+  border: 1px solid red
+  border-top-right-radius: 2em
+#divstyle1
+  width: 350px
+  height: 55px
+  border: 1px solid red
+  border-top-right-radius: 2em
+#divstylebox  
+  width: 350px
+  height: 115px
+  border: 1px solid red
+  border-top-right-radius: 2em
+#divstylebox1 
+  width: 350px
+  height: 125px
+  border: 1px solid red
+  border-top-right-radius: 2em
+#divstylebox2 
+  width: 450px
+  height: 120px
+  border: 1px solid red
+#myDiv2 
+  border: 2px solid #0094ff
+  -webkit-border-top-left-radius: 6px
+  -webkit-border-top-right-radius: 6px
+  -moz-border-radius-topleft: 6px
+  -moz-border-radius-topright: 6px
+  border-top-left-radius: 6px
+  border-top-right-radius: 6px
+  //width:90%;
+  font-size: 12pt
+  //height:500px;
+.mediaplayer 
+  position: relative
+  height: 0
+  width: 40%
+  max-width: 980px
+  min-width: 310px
+  padding-bottom: 50.625%
+  margin: auto
+    
+
+.mediaplayer video, .mediaplayer .polyfill-video 
+  position: absolute
+  top: 0
+  left: 0
+  height: 50%
+  width: 100%
+
+.cue-display span.cue 
+  color: yellow
+  ::cue 
+  color: yellow
+
+  ::cue(.customstyle) 
+  color: red
+  font: bold
+
+.cue-display span.cue .customstyle 
+  color: red
+  font: bold
+#video
+  position: fixed
+  border: solid 1px #000000
+  width: 654px 
+  height: 454px
+  background-color: #FFFFFF
+  left: 23%
+  top: 11%
+  display: none
+#headermenu
+  font-size: 20px
+  font-color: white
+  line-height: 2.428571429
+  
