--- a/app/views/nouns/noun.html.haml
+++ b/app/views/nouns/noun.html.haml
@@ -1,51 +1,40 @@
-<html>
-%body
-  #form-left2
-    %p
-      %h1
-        %b
-          %u
-            %center Nouns-Naming Words
-      %br
-        %p
-          %b Look at the following sentences:
-          %br
-            %br
+%html
+  %body
+    %form
+      %p{:style => "font-family:arial;color:green;font-size:20px;"} Nouns  -	Naming Words:
+      %h4
+        %ol{:start => "1."}
+          %li
+            The
+            %mark boy
+            is jumping.
+            %h4 The word boy is the name of a person.
+      %h4
+        %ol{:start => "2."}
+          %li
+            The
+            %mark dog
+            is barking.
+            %h4 The word dog is the name of an animal.
+      %h4
+        %ol{:start => "3."}
+          %li
+            That is a
+            %mark temple
+            %h4 The word temple is the name of a place.
+      %h4
+        %ol{:start => "4."}
+          %li
+            he has a
+            %mark bat
+            %h4 The word bat is the name of a thing.
+            %mark Boy, dog, temple and bat are naming words. Naming words are called nouns.
+            .row
               %br
-                %h4
-                  %ol{:start => "1."}
-                    %li
-                      The
-                      %b boy
-                      is jumping.
-                      %p
-                        The word boy is the name of a person.
-                        %br
-                          %li
-                            The
-                            %b dog
-                            is barking.
-                            %p
-                              The word dog is the name of an animal.
-                              %br
-                                %li
-                                  That is a
-                                  = succeed "." do
-                                    %b temple
-                                  %p
-                                    The word temple is the name of a place.
-                                    %br
-                                      %li
-                                        He has a
-                                        = succeed "." do
-                                          %b bat
-                                        %p
-                                          The word bat is the name of a thing.
-                                          %br
-                                            %br
-                                              %br
-                                                %br
-                                                  %br
-                                                    %p
-                                                      Boy,dog,temple and bat are naming words.Naming words are called
-                                                      = link_to "prevoius",  staticpages_alphabet_path
+              .pull-left
+                = link_to "previous",  staticpages_consonants_path, :class => "btn-primary btn"
+              .pull-right
+                = link_to "next", nouns_noun_exercise_path, :class => "btn-primary btn"
+        
+
+
