--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,7 @@
   %head
     = stylesheet_link_tag  "application", media: "all"
     = javascript_include_tag "application"
+    = javascript_include_tag 'swfobject'
     = csrf_meta_tags
   %body
     = render "layouts/header"
