--- a/app/views/staticpages/testpage.html.haml
+++ b/app/views/staticpages/testpage.html.haml
@@ -1,30 +1,7 @@
-.col-sm-2
-  #Three
-    I AM GIFTED
-  %p.text-info
-    An online coaching center
-.col-sm-5
-  %div{:style => "height:90px;width:1100px;float:left"}
-    = image_tag("img1.jpeg", :alt => "rss feed", :class => "img-rounded" , :style => "height:90px;width:180px")
-    = image_tag("img3.jpeg", :alt => "rss feed", :class => "img-rounded" , :style => "height:90px;width:180px")
-    = image_tag("img5.jpeg", :alt => "rss feed", :class => "img-rounded" , :style => "height:90px;width:180px")
-    = image_tag("img6.jpeg", :alt => "rss feed", :class => "img-rounded" , :style => "height:90px;width:180px")
-    = image_tag("img7.jpeg", :alt => "rss feed", :class => "img-rounded" , :style => "height:90px;width:180px")
-    = image_tag("101.jpg",   :alt => "rss feed", :class => "img-rounded" , :style => "height:90px;width:180px")
-  
-    %nav.navbar.navbar-inverse{:role => "navigation"}
-      .container-fluid
-        .navbar-header
-          %button.navbar-toggle{"data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
-            %span.sr-only Toggle navigation
-            %span.icon-bar
-              %span.icon-bar
-                %span.icon-bar
-                  / Collect the nav links, forms, and other content for toggling
-                  #bs-example-navbar-collapse-1.collapse.navbar-collapse
-                    %ul.nav.navbar-nav
-                      %li= link_to "Home", new_user_session_path
-                      %li= link_to "Programs", programs_path
-                      %li= link_to "NGO Services", ngoservices_path
-                      %li= link_to "Board Of Education", nouns_noun_path
-                      
+%marquee
+  = image_tag("headerimage.jpeg", :alt => "rss feed", :class => "img-rounded" , :style => "height:100px;width:200px")
+
+
+
+
+          
