--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 .col-xs-12.col-sm-12
   #Three
     I AM GIFTED
-  %p.text-info
+  #text-info
     An online coaching center
 .col-xs-13.col-sm-13
   %marquee
