--- a/app/views/staticpages/activity12.html.haml
+++ b/app/views/staticpages/activity12.html.haml
@@ -9,7 +9,10 @@
           Once the petals are ready, use a hot glue gun to secure them, one by one, to the wooden skewer. All five petals should fit neatly around the skewer, which serves as the stem of the flower.
           .row
             %br
-            .pull-left
-              = link_to "previous", staticpages_activity11_path, :class => "btn-primary btn"
-            .pull-right
-              = link_to "next", staticpages_activity13_path, :class => "btn-primary btn"
+            %ul.pager
+              %li
+                = link_to "previous",  staticpages_activity11_path
+              %li
+                = link_to "next",  staticpages_activity13_path
+
+         
