--- a/app/views/staticpages/activity9.html.haml
+++ b/app/views/staticpages/activity9.html.haml
@@ -9,7 +9,10 @@
           Fold the triangles over and upwards again. Now you're ready to glue.
           .row
             %br
-            .pull-left
-              = link_to "previous", staticpages_activity8_path, :class => "btn-primary btn"
-            .pull-right
-              = link_to "next", staticpages_activity10_path, :class => "btn-primary btn"
+            %ul.pager
+              %li
+                = link_to "previous",  staticpages_activity8_path
+              %li
+                = link_to "next",  staticpages_activity10_path
+
+          
