--- a/app/views/staticpages/programs.html.haml
+++ b/app/views/staticpages/programs.html.haml
@@ -6,9 +6,10 @@
         = image_tag("activity.jpg", :alt => "rss feed", :class => "img-rounded" , :style => "height:360px;width:350px")
         .row
           %br
-          .pull-left
-            = link_to "previous",  '#', :class => "btn-primary btn"
-          .pull-right
-            = link_to "next", staticpages_activity1_path, :class => "btn-primary btn"
+          %ul.pager
+            %li
+              %a{:href => "#"} Previous
+            %li
+              = link_to "next", staticpages_activity1_path
 
 
