--- a/app/views/staticpages/testpage.html.haml
+++ b/app/views/staticpages/testpage.html.haml
@@ -1,7 +1,1 @@
-%marquee
-  = image_tag("headerimage.jpeg", :alt => "rss feed", :class => "img-rounded" , :style => "height:100px;width:200px")
-
-
-
-
-          
+%embed{:height => "345", :src => "https://www.youtube.com/v/M7lc1UVf-VE?version=3", :type => "application/x-shockwave-flash", :width => "420"}
