--- a/app/views/staticpages/verb.html.haml
+++ b/app/views/staticpages/verb.html.haml
@@ -59,10 +59,11 @@
                                       %tr
                                         %td adjective
                                     .row
-                                      .pull-left
-                                        = link_to "previous",  staticpages_article_path, :class => "btn-primary btn"
-                                      .pull-right
-                                        = link_to "next",  staticpages_verb1_path, :class => "btn-primary btn"
+                                      %ul.pager
+                                        .pull-left
+                                          %li= link_to "previous",  staticpages_article_path
+                                        .pull-right
+                                          %li= link_to "next" ,  staticpages_verb1_path
 
 
   
