--- a/app/views/nouns/noun.html.haml
+++ b/app/views/nouns/noun.html.haml
@@ -31,10 +31,12 @@
             %mark Boy, dog, temple and bat are naming words. Naming words are called nouns.
             .row
               %br
-              .pull-left
-                = link_to "previous",  staticpages_consonants_path, :class => "btn-primary btn"
-              .pull-right
-                = link_to "next", nouns_noun_exercise_path, :class => "btn-primary btn"
-        
+              %ul.pager
+                .pull-left
+                  %li
+                    = link_to "previous",  staticpages_consonants_path
+                .pull-right
+                  %li
+                    = link_to "next" , nouns_noun_exercise_path
 
 
