--- a/app/views/nouns/noun_exercise.html.haml
+++ b/app/views/nouns/noun_exercise.html.haml
@@ -23,7 +23,10 @@
               %li apple, banana, ripe, mango, orange
               %li dear, cow, buffalo, deer, goat
               %li table, chair, bench, broken desk
-              .pull-left
-                = link_to "previous",  nouns_noun_path, :class => "btn-primary btn"
-              .pull-right
-                = link_to "next", nouns_common_noun_path, :class => "btn-primary btn"
+              %ul.pager
+                .pull-left
+                  %li
+                    = link_to "previous",  nouns_noun_path
+                .pull-right
+                  %li
+                    = link_to "next" ,nouns_common_noun_path
