--- a/app/views/pronouns/pronoun1.html.haml
+++ b/app/views/pronouns/pronoun1.html.haml
@@ -40,10 +40,9 @@
           %br
           You are students. 
           %br
-          .pull-left
-            = link_to "previous",  pronouns_pronoun_path, :class => "btn-primary btn"
-          .pull-right
-            = link_to "next", pronouns_pronoun2_path, :class => "btn-primary btn"
-
-
+          %ul.pager
+            .pull-left
+              %li= link_to "previous",   pronouns_pronoun_path
+            .pull-right
+              %li= link_to "next" , pronouns_pronoun2_path
 
