--- a/app/views/pronouns/pronoun2.html.haml
+++ b/app/views/pronouns/pronoun2.html.haml
@@ -50,9 +50,9 @@
           %b were
           late yesterday. ( you for more than one boy)
           %br
-          .pull-left
-            = link_to "previous",  pronouns_pronoun1_path, :class => "btn-primary btn"
-          .pull-right
-            = link_to "next", pronouns_pronoun3_path, :class => "btn-primary btn"
-
+          %ul.pager
+            .pull-left
+              %li= link_to "previous",   pronouns_pronoun1_path
+            .pull-right
+              %li= link_to "next" ,  pronouns_pronoun3_path
 
