--- a/app/views/pronouns/pronoun3.html.haml
+++ b/app/views/pronouns/pronoun3.html.haml
@@ -58,9 +58,8 @@
                                                             You
                                                             %b have
                                                             new bats. ( you for more than one boy)
-                                                            .pull-left
-                                                              = link_to "previous",  pronouns_pronoun2_path, :class => "btn-primary btn"
-                                                            .pull-right
-                                                              = link_to "next", staticpages_adjectives_path, :class => "btn-primary btn"
-
-  
+                                                            %ul.pager
+                                                              .pull-left
+                                                                %li= link_to "previous",   pronouns_pronoun2_path
+                                                              .pull-right
+                                                                %li= link_to "next" ,   staticpages_adjectives_path
