--- a/app/views/staticpages/activity14.html.haml
+++ b/app/views/staticpages/activity14.html.haml
@@ -5,7 +5,8 @@
         = image_tag("activity.jpg", :alt => "rss feed", :class => "img-rounded" , :style => "height:360px;width:350px")
         .row
           %br
-          .pull-left
-            = link_to "previous", staticpages_activity13_path, :class => "btn-primary btn"
-          .pull-right
-            = link_to "next", '#', :class => "btn-primary btn"
+          %ul.pager
+            %li
+              = link_to "previous",  staticpages_activity13_path
+            %li 
+              = link_to "next", '#'
