--- a/app/views/staticpages/activity4.html.haml
+++ b/app/views/staticpages/activity4.html.haml
@@ -9,7 +9,10 @@
           Open up the flaps so you are back to the previous triangle.
           .row
             %br
-            .pull-left
-              = link_to "previous", staticpages_activity3_path, :class => "btn-primary btn"
-            .pull-right
-              = link_to "next", staticpages_activity5_path, :class => "btn-primary btn"
+            %ul.pager
+              %li
+                = link_to "previous",  staticpages_activity3_path
+              %li
+                = link_to "next",  staticpages_activity5_path
+
+          
