--- a/app/views/staticpages/activity7.html.haml
+++ b/app/views/staticpages/activity7.html.haml
@@ -9,7 +9,10 @@
           This time, fold the two small triangles inwards.
           .row
             %br
-            .pull-left
-              = link_to "previous", staticpages_activity6_path, :class => "btn-primary btn"
-            .pull-right
-              = link_to "next", staticpages_activity8_path, :class => "btn-primary btn"
+            %ul.pager
+              %li
+                = link_to "previous",  staticpages_activity6_path
+              %li
+                = link_to "next",  staticpages_activity8_path
+
+          
