--- a/app/views/staticpages/activity8.html.haml
+++ b/app/views/staticpages/activity8.html.haml
@@ -9,8 +9,11 @@
           Fold the lower sides of the triangle upwards.
           .row
             %br
-            .pull-left
-              = link_to "previous", staticpages_activity7_path, :class => "btn-primary btn"
-            .pull-right
-              = link_to "next", staticpages_activity9_path, :class => "btn-primary btn"
+            %ul.pager
+              %li
+                = link_to "previous",  staticpages_activity7_path
+              %li
+                = link_to "next",  staticpages_activity9_path
+
+          
 
