--- a/app/views/staticpages/adjimage.html.haml
+++ b/app/views/staticpages/adjimage.html.haml
@@ -6,8 +6,8 @@
         = image_tag("adject.jpg", :alt => "rss feed", :class => "img-rounded" , :style => "height:450px;width:450px")
       .col-sm-5
         = image_tag("adject1.jpg", :alt => "rss feed", :class => "img-rounded" , :style => "height:450px;width:450px")
-        .pull-left
-          = link_to "previous",  staticpages_adjectives_path, :class => "btn-primary btn"
-        .pull-right
-          = link_to "next",  staticpages_article_path, :class => "btn-primary btn"
-
+        %ul.pager
+          .pull-left
+            %li= link_to "previous",   staticpages_adjectives_path
+          .pull-right
+            %li= link_to "next" ,   staticpages_article_path
