--- a/app/views/staticpages/ngoservices.html.haml
+++ b/app/views/staticpages/ngoservices.html.haml
@@ -1,4 +1,5 @@
 %html
   %body
-    %form
-      = video_player({:file =>"/public/videos",:type => "video/mp4"})
+    .col-sm-4
+      = video_player({:file => "/videos/kompally1.mp4"})
+   
