--- a/app/views/staticpages/events.html.haml
+++ b/app/views/staticpages/events.html.haml
@@ -1,12 +1,10 @@
 .row
   .col-sm-9
-    .row
-      %center
-        %h1  Adopted Schools
+    %center
+      %h1  Adopted Schools
     .row
       .col-sm-1
       .col-sm-11
-        %br
         #well7
           #accordion.panel-group
             .panel.panel-default
@@ -44,12 +42,12 @@
                 %h4.panel-title
                   %a{"data-parent" => "#accordion", "data-toggle" => "collapse", :href => "#collapseTwo"}
                     Events of UDDAN in 2012-13:
-                #collapseTwo.panel-collapse.collapse
-                  .panel-body
-                    %h5.icon-circle-arrow-right Diabetes awareness program conducted by  Hyderabad Charitable Hospital Trust with support from  Dr. Reddy’s  lab 7 Feb 2013@ Govt. School Ramkote.
-                    %h5.icon-circle-arrow-right Workshops given by Laxmi ma’am 
-                    %h5 16 July 2012 – Workshop for our team members.
-                    %h5  5 Jan 2013 – Workshop for Junior Jaycees Banjara
+              #collapseTwo.panel-collapse.collapse
+                .panel-body
+                  %h5.icon-circle-arrow-right Diabetes awareness program conducted by  Hyderabad Charitable Hospital Trust with support from  Dr. Reddy’s  lab 7 Feb 2013@ Govt. School Ramkote.
+                  %h5.icon-circle-arrow-right Workshops given by Laxmi ma’am 
+                  %h5.icon-circle-arrow-right 16 July 2012 – Workshop for our team members.
+                  %h5.icon-circle-arrow-right  5 Jan 2013 – Workshop for Junior Jaycees Banjara
 
             .panel.panel-default
               .panel-heading
@@ -87,8 +85,6 @@
 
   .col-sm-2
     .pull-right
-      %br
-      %br
       %br
       %br
       %br
