--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,7 +1,9 @@
-.navbar.footer 
-  .container
-    .pull-right.text-muted
-      = raw("<i class = 'glyphicon glyphicon-copyright-mark'></i>#{link_to 'OstryaLabs.', 'http://www.ostryalabs.com', :class =>"text-muted"} All Rights Reserved")
-      = link_to image_tag("img8.jpeg", :height => "24px"), "#"
-      = link_to image_tag("img9.jpeg", :height => "24px"), "#"
-      = link_to image_tag("img10.jpeg", :height => "24px"), "#"
+.col-md-12
+  .navbar.navbar-fixed-bottom
+    .container
+      .pull-right.text-muted
+        = raw("<i class = 'glyphicon glyphicon-copyright-mark'></i>#{link_to 'OstryaLabs.', 'http://www.ostryalabs.com', :class =>"text-muted"} All Rights Reserved")
+        = link_to image_tag("img8.jpeg", :height => "24px"), "#"
+        = link_to image_tag("img9.jpeg", :height => "24px"), "#"
+        = link_to image_tag("img10.jpeg", :height => "24px"), "#"
+ 
